# effective_transformer

./: .gitignore  CMakeLists.txt  Readme.md  common.h
cuda/: CMakeLists.txt  attention.cu  attention.h  cuda_kernels.cu  cuda_kernels.h  scatter_nd.cu  scatter_nd.h
python/: MANIFEST.in  setup.py  test_transformer_input.py
python/effective_transformer/: __init__.py  libtf_effectivetransformer.so.1.15
python/effective_transformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample/bert_example/: README.md  run_cloze_task.py  run_cloze_task_effective.py
sample/tensorflow/: README.md  benchmark.py  benchmark_rm_pad.py  benchmark_rm_pad_slow_scatter.py  benchmark_v1_compat.py  bert_config.json  effective_transformer.py  model_layers.py  modeling.py  modeling_rm_pad.py  modeling_rm_pad_slow_scatter.py  modeling_v1_compat.py  run_cloze_task.py  run_cloze_task_standard.py
tf_op/: CMakeLists.txt  bert_transformer_op.cc  bert_transformer_op.cu  bert_transformer_op.cu.cc  bert_transformer_op.h  scatter_nd_op.cc
